@@ -82,17 +82,30 @@ public class FileController {
 //            System.out.println("Nhap vao mot so");
 //            int x = s.nextInt();
 //            System.out.println(x);
-            Process p = Runtime.getRuntime().exec("/home/phamxuanlam/go/bin/claat export 1rz-UJcd5wQ-giAdIm81bEQoT94xuUJwTj5eik_8LDA4");
+          //  Process p = Runtime.getRuntime().exec("/home/phamxuanlam/go/bin/claat export 1rz-UJcd5wQ-giAdIm81bEQoT94xuUJwTj5eik_8LDA4");
 
-       //     Process p = Runtime.getRuntime().exec("./claat export 1rz-UJcd5wQ-giAdIm81bEQoT94xuUJwTj5eik_8LDA4");
+     //       Process p = Runtime.getRuntime().exec("./claat export 1rz-UJcd5wQ-giAdIm81bEQoT94xuUJwTj5eik_8LDA4");
+      //      Process p = Runtime.getRuntime().exec("java test");
 
-            //    Process p = Runtime.getRuntime().exec("java -v");
-            BufferedReader input = new BufferedReader(new InputStreamReader(p.getErrorStream()));
-            String line = input.readLine();
-            System.out.println("Dong "+ line);
-            p.waitFor();
+            ProcessBuilder pb = new ProcessBuilder("/home/phamxuanlam/go/bin/claat","export","1rz-UJcd5wQ-giAdIm81bEQoT94xuUJwTj5eik_8LDA4").inheritIO();
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String line;
+            while ((line = reader.readLine()) != null)
+                System.out.println("tasklist: " + line);
+            process.waitFor();
 
-            return line;
+
+
+
+//            //    Process p = Runtime.getRuntime().exec("java -v");
+//            BufferedReader input = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+//            String line = input.readLine();
+//            System.out.println("Dong "+ line);
+//            p.waitFor();
+//
+//            return line;
 //            System.out.println("Done87");
 //            String folderName = line.split("\t")[1];
 //            BufferedReader br = new BufferedReader(new InputStreamReader(new FileInputStream(folderName + "/codelab.json")));
